fix: price-list overflow corrected

--- a/app/scss/components/prices.scss
+++ b/app/scss/components/prices.scss
@@ -77,7 +77,7 @@
         &::before {
             content: '';
             position:absolute;
-            right: -156px;
+            right: -16px;
             top: -185px;
             z-index: 0;
             width: 503px;
@@ -86,9 +86,6 @@
             background-repeat: no-repeat;
             background-size: cover;
             aspect-ratio: 503 / 282;
-            //margin-left: -156px;
-
-            //transform: translate(156px, 185px);
         } 
     }
 }
